# map2_patch_discovery

./: .gitignore  FEATURE_REFERENCE.md  PIPELINE_WALKTHROUGH.docx  PIPELINE_WALKTHROUGH.md  README.md  pyproject.toml  requirements.txt
.mplconfig/: fontlist-v390.json
configs/: example_dataset.yaml  latent_report_3_20_26_all_samples_flag_only_mask_internal_only_robust.yaml  latent_report_3_20_26_all_samples_ha_only_mask_internal_only_robust.yaml  latent_report_3_20_26_all_samples_map2_prior_only.yaml  latent_report_3_20_26_all_samples_mask_internal_only.yaml  latent_report_3_20_26_all_samples_mask_internal_only_minmax.yaml  latent_report_3_20_26_all_samples_mask_internal_only_robust.yaml  latent_report_3_20_26_all_samples_shank2_only_mask_internal_only_robust.yaml  latent_report_3_20_26_all_samples_variance_thresholded.yaml  latent_report_3_20_26_two_sample.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_0.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_1.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_2.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_3.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_4.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_5.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_6.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_7.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_8.yaml  latent_report_3_20_26_two_sample_feature_variance10_cluster_9.yaml  latent_report_3_20_26_two_sample_feature_variance_cluster_0.yaml  latent_report_3_20_26_two_sample_feature_variance_cluster_1.yaml  latent_report_3_20_26_two_sample_feature_variance_cluster_2.yaml  latent_report_3_20_26_two_sample_variance_thresholded.yaml  latent_report_template.yaml  real_dataset_3_20_26_all_masked_samples.yaml  real_dataset_3_20_26_all_samples.yaml  real_dataset_3_20_26_all_samples_blob_flag.yaml  real_dataset_3_20_26_all_samples_blob_ha.yaml  real_dataset_3_20_26_all_samples_blob_shank2.yaml  real_dataset_3_20_26_two_sample.yaml  real_dataset_template.yaml
src/map2_patch_discovery/: __init__.py  cli.py  config.py  (+23 more)
