[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map2-patch-discovery"
version = "0.1.0"
description = "MAP2-ROI-driven patch extraction and discovery scaffolding for ICC puncta analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "tifffile>=2024.2.12",
  "zarr>=2.18",
  "scipy>=1.11",
  "scikit-learn>=1.5",
  "matplotlib>=3.8",
  "scikit-image>=0.22",
  "PyWavelets>=1.5",
  "pyarrow>=16.0",
]

[project.optional-dependencies]
full = [
  "scikit-image>=0.22",
  "PyWavelets>=1.5",
  "pyarrow>=16.0",
]

[project.scripts]
map2-patch-extract = "map2_patch_discovery.cli:main"
map2-latent-report = "map2_patch_discovery.report_cli:main"
map2-mask-export = "map2_patch_discovery.mask_cli:main"
map2-mask-batch = "map2_patch_discovery.mask_batch_cli:main"
map2-feature-variance = "map2_patch_discovery.feature_variance_cli:main"
map2-feature-variance-batch = "map2_patch_discovery.feature_variance_batch_cli:main"
map2-pca-variance = "map2_patch_discovery.pca_variance_cli:main"
map2-posthoc-feature-analysis = "map2_patch_discovery.posthoc_feature_analysis_cli:main"
map2-pc-overlay = "map2_patch_discovery.pc_overlay_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
